--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -15,23 +15,9 @@
     src: url('./fonts/slick.eot');
     src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
-
 /* Arrows */
-
-.news-slider .slick-prev {
-    -webkit-transform: none;
-        -ms-transform: none;
-            transform: none;
-}
-
-.news-slider .slick-next {
-    -webkit-transform: none;
-        -ms-transform: none;
-            transform: none;
-}
-
-.news-slider .slick-prev,
-.news-slider .slick-next
+.slick-prev,
+.slick-next
 {
     font-size: 0;
     line-height: 0;
@@ -41,140 +27,114 @@
 
     display: block;
 
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     padding: 0;
-    margin-top: -10px\9; /*lte IE 8*/
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
 
     cursor: pointer;
 
     color: transparent;
-    border-radius: 50%;
     border: none;
     outline: none;
     background: transparent;
-    z-index: 500;
-    opacity: 0.75;
-
 }
-
- .news-slider .slick-prev:hover,
- .news-slider .slick-prev:focus,
- .news-slider .slick-next:hover,
- .news-slider .slick-next:focus
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus
+{
+    color: transparent;
+    outline: none;
+    background: transparent;
+}
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before
 {
     opacity: 1;
-    -webkit-animation-name: hvr-pop;
-    animation-name: hvr-pop;
-    -webkit-animation-duration: 0.3s;
-    animation-duration: 0.3s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
 }
-
- .news-slider .slick-prev:hover:before,
- .news-slider .slick-prev:focus:before,
- .news-slider .slick-next:hover:before,
- .news-slider .slick-next:focus:before
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before
 {
-    opacity: 1;
-    -webkit-animation-name: hvr-pop;
-    animation-name: hvr-pop;
-    -webkit-animation-duration: 0.3s;
-    animation-duration: 0.3s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
+    opacity: .25;
 }
 
- .news-slider .slick-prev.slick-disabled:before,
- .news-slider .slick-next.slick-disabled:before
-{
-    opacity: .20;
-}
-
- .news-slider .slick-prev:before,
- .news-slider .slick-next:before
+.slick-prev:before,
+.slick-next:before
 {
     font-family: 'slick';
     font-size: 20px;
     line-height: 1;
 
-    opacity: .20; /* Originally .75. */
-
-    color: #5f5454;
+    opacity: .75;
+    color: white;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
- .news-slider .slick-prev
+.slick-prev
 {
-    left: 10px;
+    left: -20px;
 }
-
-[dir='rtl'] .news-slider .slick-prev
+[dir='rtl'] .slick-prev
 {
-    right: -25px;
+    right: -20px;
     left: auto;
 }
-
- .news-slider .slick-prev:before
+.slick-prev:before
 {
     content: '←';
 }
-[dir='rtl'] .news-slider .slick-prev:before
+[dir='rtl'] .slick-prev:before
 {
     content: '→';
 }
 
- .news-slider .slick-next
+.slick-next
 {
-    right: 10px;
+    right: -15px;
 }
-[dir='rtl'] .news-slider .slick-next
+[dir='rtl'] .slick-next
 {
     right: auto;
-    left: -25px;
+    left: -15px;
 }
- .news-slider .slick-next:before
+.slick-next:before
 {
     content: '→';
 }
-[dir='rtl'] .news-slider .slick-next:before
+[dir='rtl'] .slick-next:before
 {
     content: '←';
 }
 
 /* Dots */
- .news-slider .slick-slider
+.slick-dotted.slick-slider
 {
     margin-bottom: 30px;
 }
 
- .news-slider .slick-dots
+.slick-dots
 {
     position: absolute;
-     bottom: -5px;
+    bottom: -25px;
 
     display: block;
 
     width: 100%;
     padding: 0;
+    margin: 0;
 
     list-style: none;
 
     text-align: center;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 7px;
 }
-
- .news-slider .slick-dots li
+.slick-dots li
 {
     position: relative;
 
@@ -187,15 +147,7 @@
 
     cursor: pointer;
 }
-
-
- .news-slider .slick-dots li button
-{
-    display: none;
-}
-
-@media only screen and (min-width: 481px) {
- .news-slider .slick-dots li button
+.slick-dots li button
 {
     font-size: 0;
     line-height: 0;
@@ -209,36 +161,24 @@
     cursor: pointer;
 
     color: transparent;
-    border: none;
-    border-radius: 50%;
+    border: 0;
     outline: none;
     background: transparent;
 }
-}
-
- .news-slider .slick-dots li button:hover,
- .news-slider .slick-dots li button:focus
+.slick-dots li button:hover,
+.slick-dots li button:focus
 {
     outline: none;
 }
- .news-slider .slick-dots li button:hover:before,
- .news-slider .slick-dots li button:focus:before
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before
 {
     opacity: 1;
-    -webkit-animation-name: hvr-pop;
-    animation-name: hvr-pop;
-    -webkit-animation-duration: 0.3s;
-    animation-duration: 0.3s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
 }
-
-.news-slider .slick-dots li button:before
+.slick-dots li button:before
 {
     font-family: 'slick';
-    font-size: 10px;
+    font-size: 6px;
     line-height: 20px;
 
     position: absolute;
@@ -257,25 +197,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
- .news-slider .slick-dots li.slick-active button:before
+.slick-dots li.slick-active button:before
 {
     opacity: .75;
     color: black;
-}
-
-
-/* Pop */
-@-webkit-keyframes hvr-pop {
-  50% {
-   -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-   }
-}
-
-@keyframes hvr-pop {
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
 }
