--- a/slick/slick.css
+++ b/slick/slick.css
@@ -16,6 +16,8 @@
     -ms-touch-action: pan-y;
         touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
+
+    width: 100%;
 }
 
 .slick-list
@@ -55,6 +57,8 @@
     left: 0;
 
     display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .slick-track:before,
 .slick-track:after
@@ -87,6 +91,7 @@
 .slick-slide img
 {
     display: block;
+    object-fit: cover;
 }
 .slick-slide.slick-loading img
 {
