--- a/slick/slick.css
+++ b/slick/slick.css
@@ -16,7 +16,6 @@
     -ms-touch-action: pan-y;
         touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
-
     width: 100%;
 }
 
@@ -57,7 +56,7 @@
     left: 0;
 
     display: block;
-    margin-left: auto;
+    margin-left: auto:
     margin-right: auto;
 }
 .slick-track:before,
